--- a/APP/index.html
+++ b/APP/index.html
@@ -7,19 +7,16 @@
 </head>
 	<body>
 		<div id="wrapper">
-			<header>
-				<a href="foodlog.html"><img class="headerimg" src="./assets/images/foodlogo.svg"></a>
+			<div class="hero">
+				
+			<div class="header">
+					<a href="foodlog.html"><img class="hero_img" src="./assets/images/foodlogo.svg"></a>
+	
+					<h1>Family Food</h1>
+				</a>
 
-				<h1>Family Food</h1>
-			</a>
-				<nav>
-					<ul>
-						<li><a href="foodlog.html">Home</a></li>
-						<li><a href="new.html">New Recipes</a></li>
-						<li><a href="about.html">About Us</a></li></li>
-						<li><a href="Contact.html">Contact Us</a></li>
-					</ul>
-				</nav>
+			</div>
+		</div>
 				<aside>
 					<a id="filter" href="#">Filter</a>
 					<div class="filter">
@@ -37,7 +34,6 @@
 					</div>
 				</aside>
 
-			</header>
 			
 			<main>
 
